tests/snapshots/tui_render__screen_doctor_100x30.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION          ┌ NETRO DOCTOR ──────────────────────────────────────────────────────────────┐
│   Dashboard         │Running diagnostics...                                                      │
│   System +          │                                                                            │
│   Network +         │  Press d to run diagnostics                                                │
│   Discovery +       │                                                                            │
│   Scanner -         │                                                                            │
│   Security x        │                                                                            │
│   Monitor |         │                                                                            │
│ > Doctor x          │                                                                            │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
│                     ┌ PROBLEMS FOUND ────────────────────────────────────────────────────────────┐
│                     │Severity  Finding                      Category       Investigate    Impact │
│                     │> HIGH    Host firewall appears disabl firewall       Security #5    -12    │
│                     │INFO      SSH is listening on all inte exposure       Security #4    -0     │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Enter investigate   i details   d re-run
