tests/snapshots/tui_render__screen_monitor_100x30.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION          ┌ Monitor — interval 2.00s ──────────────────────────────────────────────────┐
│   Dashboard         │ CPU       ...................................................=  42.0%      │
│   System +          │            load 1.20 1.10 0.90                                             │
│   Network +         │ Memory    ...................................................+  51.0%      │
│   Discovery +       │ Network   -> interfaces: 1                                                 │
│   Scanner -         │           Down .........................@    12.4 MB/s                     │
│   Security x        │           Up   .........................@     1.8 MB/s                     │
│ > Monitor |         │ Temperatures Package id 0 51C                                              │
│   Doctor x          │                                                                            │
│   Reports           └────────────────────────────────────────────────────────────────────────────┘
│   Snapshots -       ┌ TOP CPU ───────────────────────────────────────────────────────────────────┐
│   Settings          │PID     Process                                             CPU%   Memory   │
│                     │2134    firefox                                             18.4   1.9 GB   │
│ 88/100 (B)          │1032    code                                                11.2   1.3 GB   │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  p pause   +/- interval (2.00s)   history 1
