tests/snapshots/tui_render__screen_reports_100x30.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION          ┌ REPORTS ───────────────────────────────────────────────────────────────────┐
│   Dashboard         │Format                                                                      │
│   System +          │ > HTML                                                                     │
│   Network +         │   JSON                                                                     │
│   Discovery +       │   CSV                                                                      │
│   Scanner -         │   Text                                                                     │
│   Security x        │                                                                            │
│   Monitor |         │Scope                                                                       │
│   Doctor x          │ > Full                                                                     │
│ > Reports           │   System                                                                   │
│   Snapshots -       │   Network                                                                  │
│   Settings          │   Security                                                                 │
│                     │                                                                            │
│ 88/100 (B)          │ Output file netro-report.html                                              │
│ Security score      │                                                                            │
│                     │  Fresh cached results are reused; presses g to regenerate.                 │
│                     │  Left/Right select   Enter edit path/generate   g generate                 │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
│                     ┌ STATUS ────────────────────────────────────────────────────────────────────┐
│                     │ no report generated in this session                                        │
│                     │ cached sections: system=true network=true security=true doctor=true        │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Left/Right select   Enter edit/generate   g generate
