tests/snapshots/tui_render__screen_scanner_100x30.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION          > Port scan   Host scan   Nmap
│   Dashboard         ┌ NEW SCAN ──────────────────────────────────────────────────────────────────┐
│   System +          │ Target       127.0.0.1                                                     │
│   Network +         │ Profile      -> Common ports   (Left/Right)                                │
│   Discovery +       │ Detection    [x] banners   [x] TLS   [ ] UDP                               │
│ > Scanner -         │ Authorization[x] I am authorized to scan this target.                      │
│   Security x        │  Suggestion: scan localhost or your own network.                           │
│   Monitor |         │  Public targets require explicit authorization.                            │
│   Doctor x          │  Left/Right field   Space toggle   Enter edit   g start scan   e export    │
│   Reports           │1/2/3 tabs                                                                  │
│   Snapshots -       │                                                                            │
│   Settings          └────────────────────────────────────────────────────────────────────────────┘
│                     ┌ RESULTS ───────────────────────────────────────────────────────────────────┐
│ 88/100 (B)          │Port   Proto  State         Service             Banner             TLS      │
│ Security score      │> 22   tcp    open          ssh (OpenSSH 9.6p1) SSH-2.0-OpenSSH_9. -        │
│                     │443    tcp    open          https/tls (nginx 1. -                  TLSv1.3  │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  ←/→ field   Space toggle   1/2/3 tabs   g start scan   e export
