tests/snapshots/tui_render__screen_security_100x30.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION          > Overview   Findings   Accounts   Listening Services   Firewall   Integrity
│   Dashboard         ┌ Overview ──────────────────────────────────────────────────────────────────┐
│   System +          │ Security score  88/100  grade B                                            │
│   Network +         │                                                                            │
│   Discovery +       │firewall  #######.......   52.0%                                            │
│   Scanner -         │    -12 HIGH: Host firewall appears disabled (firewall.disabled)            │
│ > Security x        │exposure  ##############  100.0%                                            │
│   Monitor |         │accounts  ##############  100.0%                                            │
│   Doctor x          │policy    ##############  100.0%                                            │
│   Reports           │configuration##############  100.0%                                         │
│   Snapshots -       │                                                                            │
│   Settings          │ methodology: Starts at 100. Categories: firewall 25, exposure 30, accounts │
│                     │25, policy 10, configuration 10. Each finding deducts it..                  │
│ 88/100 (B)          │                                                                            │
│ Security score      │ limitations                                                                │
│                     │  - password policy could not be read on this platform                      │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Left/Right tabs   Enter details
