tests/snapshots/tui_render__security_tab_accounts.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Overview   Findings > Accounts   Listening Services   Firewall   Integrity
│   Dashboard         ┌ Accounts ──────────────────────────────────────────────────────────────────┐
│   System +          │Account        UID    Priv  Type    Login  Password  Groups                 │
│   Network +         │> root         0      yes   user    yes    set       root                   │
│   Discovery +       │daemon         1            system  no     locked                           │
│   Scanner -         │                                                                            │
│ > Security x        │                                                                            │
│   Monitor |         │                                                                            │
│   Doctor x          │                                                                            │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Left/Right tabs   Enter details
