tests/snapshots/tui_render__security_tab_external.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Overview   Findings   Accounts   Listening Services   Firewall   Integrity >
│   Dashboard         ┌ External Tools ────────────────────────────────────────────────────────────┐
│   System +          │External scanners are optional and clearly labelled as external tool output.│
│   Network +         │  x run external scanners (slow, requires installation)                     │
│   Discovery +       │                                                                            │
│   Scanner -         │ rkhunter    - UNAVAILABLE  not installed                                   │
│ > Security x        │ lynis       - INFO  installed but not run (use --run-external)             │
│   Monitor |         │                                                                            │
│   Doctor x          │                                                                            │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Left/Right tabs   Enter details
